--- a/app/View/cadastro.html
+++ b/app/View/cadastro.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap 3, from LayoutIt!</title>
+    <title>Cadastro de usuário</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <meta name="author" content="Guilherme Castanho">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -23,7 +22,7 @@
 		<div class="col-md-10">
 			<div class="page-header">
 				<h1>
-					LayoutIt! <small>Interface Builder for Bootstrap</small>
+					FITWHERE <small>Crie sua conta!</small>
 				</h1>
 			</div>
 			<ul class="nav nav-pills">
@@ -70,6 +69,13 @@
 		<div class="col-md-4">
 			<form role="form">
 				<div class="form-group">
+					 
+					<label for="nome">
+						Nome
+					</label>
+					<input type="text" class="form-control" id="nome">
+				</div>
+                                <div class="form-group">
 					 
 					<label for="exampleInputEmail1">
 						Email address
