--- a/app/View/cadastro.html
+++ b/app/View/cadastro.html
@@ -1,126 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Cadastro de usuário</title>
+        <title>Cadastro de usuário</title>
 
-    <meta name="author" content="Guilherme Castanho">
+        <meta name="author" content="Guilherme Castanho">
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
 
-  </head>
-  <body>
+    </head>
+    <body>
 
-    <div class="container-fluid">
-	<div class="row">
-		<div class="col-md-1">
-		</div>
-		<div class="col-md-10">
-			<div class="page-header">
-				<h1>
-					FITWHERE <small>Crie sua conta!</small>
-				</h1>
-			</div>
-			<ul class="nav nav-pills">
-				<li class="active">
-					<a href="#">Home</a>
-				</li>
-				<li>
-					<a href="#">Profile</a>
-				</li>
-				<li class="disabled">
-					<a href="#">Messages</a>
-				</li>
-				<li class="dropdown pull-right">
-					 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Dropdown<strong class="caret"></strong></a>
-					<ul class="dropdown-menu">
-						<li>
-							<a href="#">Action</a>
-						</li>
-						<li>
-							<a href="#">Another action</a>
-						</li>
-						<li>
-							<a href="#">Something else here</a>
-						</li>
-						<li class="divider">
-						</li>
-						<li>
-							<a href="#">Separated link</a>
-						</li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-		<div class="col-md-1">
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-1">
-		</div>
-		<div class="col-md-2">
-		</div>
-		<div class="col-md-1">
-		</div>
-		<div class="col-md-4">
-			<form role="form">
-				<div class="form-group">
-					 
-					<label for="nome">
-						Nome
-					</label>
-					<input type="text" class="form-control" id="nome">
-				</div>
-                                <div class="form-group">
-					 
-					<label for="exampleInputEmail1">
-						Email address
-					</label>
-					<input type="email" class="form-control" id="exampleInputEmail1">
-				</div>
-				<div class="form-group">
-					 
-					<label for="exampleInputPassword1">
-						Password
-					</label>
-					<input type="password" class="form-control" id="exampleInputPassword1">
-				</div>
-				<div class="form-group">
-					 
-					<label for="exampleInputFile">
-						File input
-					</label>
-					<input type="file" id="exampleInputFile">
-					<p class="help-block">
-						Example block-level help text here.
-					</p>
-				</div>
-				<div class="checkbox">
-					 
-					<label>
-						<input type="checkbox"> Check me out
-					</label>
-				</div> 
-				<button type="submit" class="btn btn-default">
-					Submit
-				</button>
-			</form>
-		</div>
-		<div class="col-md-1">
-		</div>
-		<div class="col-md-2">
-		</div>
-		<div class="col-md-1">
-		</div>
-	</div>
-</div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-1">
+                </div>
+                <div class="col-md-10">
+                    <div class="page-header">
+                        <h1>
+                            FITWHERE <small>Crie sua conta!</small>
+                        </h1>
+                    </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
-  </body>
+                </div>
+                <div class="col-md-1">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-1">
+                </div>
+                <div class="col-md-2">
+                </div>
+                <div class="col-md-1">
+                </div>
+                <div class="col-md-4">
+                    <form role="form">
+                        <div class="form-group">
+
+                            <label for="nome">
+                                Nome
+                            </label>
+                            <input type="text" class="form-control" id="nome">
+                        </div>
+                        <div class="form-group">
+                            <label for="sobrenome">
+                                Sobrenome
+                            </label>
+                            <input type="text" class="form-control" id="sobrenome">
+                        </div>
+                        <div class="form-group">
+
+                            <label for="exampleInputEmail1">
+                                Email address
+                            </label>
+                            <input type="email" class="form-control" id="exampleInputEmail1">
+                        </div>
+                        <div class="form-group">
+
+                            <label for="exampleInputPassword1">
+                                Password
+                            </label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+
+
+                        <button type="submit" class="btn btn-default">
+                            Submit
+                        </button>
+                    </form>
+                </div>
+                <div class="col-md-1">
+                </div>
+                <div class="col-md-2">
+
+                </div>
+                <div class="col-md-1">
+                </div>
+            </div>
+        </div>
+
+        <script src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
