--- a/app/View/cadastro.html
+++ b/app/View/cadastro.html
@@ -38,7 +38,8 @@
                 <div class="col-md-1">
                 </div>
                 <div class="col-md-4">
-                    <form role="form">
+                    <form role="form" action="pg_inicial.html">
+
                         <div class="form-group">
 
                             <label for="nome">
@@ -55,21 +56,21 @@
                         <div class="form-group">
 
                             <label for="exampleInputEmail1">
-                                Email address
+                                Endereço de Email
                             </label>
                             <input type="email" class="form-control" id="exampleInputEmail1">
                         </div>
                         <div class="form-group">
 
                             <label for="exampleInputPassword1">
-                                Password
+                                Senha
                             </label>
                             <input type="password" class="form-control" id="exampleInputPassword1">
                         </div>
 
 
                         <button type="submit" class="btn btn-default">
-                            Submit
+                            Cadastre
                         </button>
                     </form>
                 </div>
