--- a/app/View/pg_inicial.html
+++ b/app/View/pg_inicial.html
@@ -29,17 +29,16 @@
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
                                 <li class="active">
-
-                                    <a href="#">Perfil</a>
+                                    <a href="#"><span class="glyphicon glyphicon-user"></span> Perfil </a>
                                 </li>
                                 <li>
-                                    <a href="#">Treinos</a>
+                                    <a href="#"><span class="glyphicon glyphicon-bishop"></span> Treinos </a>
                                 </li>
                                 <li>
-                                    <a href="#">Grupos</a>
+                                    <a href="#"><span class="glyphicon glyphicon-tasks"></span> Grupos </a>
                                 </li>
                                 <li>
-                                    <a href="#">Artigos</a>
+                                    <a href="#"><span class="glyphicon glyphicon-bell"></span> Artigos </a>
                                 </li>
 
                             </ul>
@@ -47,15 +46,15 @@
                             <ul class="nav navbar-nav navbar-right">
 
                                 <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Guilherme<strong class="caret"></strong></a>
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Guilherme <strong class="caret"></strong></a>
                                     <ul class="dropdown-menu">
                                         <li>
-                                            <a href="#">Configurações</a>
+                                            <a href="#"><span class="glyphicon glyphicon-edit"></span> Configurações</a>
                                         </li>
                                         <li class="divider">
                                         </li>
                                         <li>
-                                            <a href="#">Sair</a>
+                                            <a href="#"><span class="glyphicon glyphicon-log-in"></span> Sair</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -73,22 +72,19 @@
                 <div class="col-md-1">
                 </div>
                 <div class="col-md-3" align="center">
-                    <img alt="Bootstrap Image Preview" src="http://lorempixel.com/150/150" class="img-thumbnail"> 
+                    <img alt="Foto de perfil" src="http://lorempixel.com/150/150" class="img-thumbnail"> 
 
                 </div>
                 <div class="col-md-4">
                     <form role="form">
                         <div class="form-group">
 
-                            <label for="exampleInputEmail1">
-                                Email address
+                            <label for="comentario">
+                                O que está fazendo?
                             </label>
-                            <input type="text" class="form-control" id="exampleInputEmail1">
+                            <input type="text" class="form-control input-lg" id="comentario">
                         </div>
-
-
-
-                        <button type="submit" class="btn btn-default">
+                       <button type="submit" class="btn btn-default">
                             Submit
                         </button>
                     </form>
@@ -104,17 +100,40 @@
                 <div class="col-md-1">
                 </div>
                 <div class="col-md-3">
+                    <ul class="list-group">
+                        <li class="list-group-item">Caminhada <span class="badge">12</span></li>
+                        <li class="list-group-item">Musculação <span class="badge">5</span></li> 
+                        <li class="list-group-item">Natação <span class="badge">3</span></li>
+                        <li class="list-group-item">Corridas <span class="badge">3</span></li>
+                    </ul>
                 </div>
                 <div class="col-md-4">
                     <p>
                         Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
                     </p>
+                    <div class="btn-group btn-group-justified">
+                        <a href="#" class="btn btn-default btn-sm">Curtir</a>
+                        <a href="#" class="btn btn-default btn-sm">Comentar</a>
+                        <a href="#" class="btn btn-default btn-sm">Compartilhar</a>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+                    </p>
+                    <div class="btn-group btn-group-justified">
+                        <a href="#" class="btn btn-default btn-sm">Curtir</a>
+                        <a href="#" class="btn btn-default btn-sm">Comentar</a>
+                        <a href="#" class="btn btn-default btn-sm">Compartilhar</a>
+                    </div>
                 </div>
                 <div class="col-md-1">
                 </div>
                 <div class="col-md-2">
                 </div>
                 <div class="col-md-1">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
                 </div>
             </div>
         </div>
