--- a/app/View/pg_inicial.html
+++ b/app/View/pg_inicial.html
@@ -80,12 +80,21 @@
                         <div class="form-group">
 
                             <label for="comentario">
-                                
+
                             </label>
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Atividade
+                                    <span class="caret"></span></button>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Corrida</a></li>
+                                    <li><a href="#">Musculação</a></li>
+                                    <li><a href="#">Aerobico</a></li>
+                                </ul>
+                            </div>
                             <input type="text" class="form-control input-lg" id="comentario" value="Como está seu treino?">
                         </div>
-                       <button type="submit" class="btn btn-default">
-                           Postar
+                        <button type="submit" class="btn btn-default">
+                            Postar
                         </button>
                     </form>
                 </div>
