--- a/app/View/pg_perfil.html
+++ b/app/View/pg_perfil.html
@@ -80,85 +80,84 @@
                     <img alt="Foto de perfil" src="http://lorempixel.com/150/150" class="img-thumbnail"> 
 
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6" align="center">
+                    
+                        <h2>Treinos</h2>
                     
                 </div>
-                <div class="col-md-1">
+
+                    <div class="col-md-1">
+                    </div>
                 </div>
-                <div class="col-md-2">
+                <div class="row">
+                    <div class="col-md-1">
+                    </div>
+                    <div class="col-md-3">
+                        <ul class="list-group">
+                            <li class="list-group-item">Caminhada <span class="badge">12</span></li>
+                            <li class="list-group-item">Musculação <span class="badge">5</span></li> 
+                            <li class="list-group-item">Natação <span class="badge">3</span></li>
+                            <li class="list-group-item">Corridas <span class="badge">3</span></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Corridas</h3>
+                        <div id="morris-bar-chart-corridas" style="height: 250px;" align="center"></div>
+                        <h3>Musculação</h3>
+                        <div id="morris-bar-chart-musculacao" style="height: 250px;"align="center"></div>
+
+                    </div>
                 </div>
+
                 <div class="col-md-1">
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-1">
+                <div class="col-md-12">
                 </div>
-                <div class="col-md-3">
-                    <ul class="list-group">
-                        <li class="list-group-item">Caminhada <span class="badge">12</span></li>
-                        <li class="list-group-item">Musculação <span class="badge">5</span></li> 
-                        <li class="list-group-item">Natação <span class="badge">3</span></li>
-                        <li class="list-group-item">Corridas <span class="badge">3</span></li>
-                    </ul>
-                </div>
-                <div class="col-md-7">
-                   <h2>Corridas</h2>
-                   <div id="morris-bar-chart-corridas" style="height: 250px;" align="center"></div>
-                   <h2>Musculação</h2>
-                   <div id="morris-bar-chart-musculacao" style="height: 250px;"align="center">></div>
-
-                </div>
-            </div>
-            
-            <div class="col-md-1">
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-            </div>
-        </div>
-    </div>
-    <script> 
+        <script> 
                 
-        new Morris.Bar({
-        element: 'morris-bar-chart-corridas',
-        data: [
-            {y: 'Segunda', a: 100, b: 90},
-            {y: 'Terça', a: 75,  b: 65},
-            {y: 'Quarta', a: 50,  b: 40}, 
-            {y: 'Quinta', a: 75,  b: 65},
-            {y: 'Sexta', a: 50,  b: 40},
-            {y: 'Sabado', a: 75,  b: 65},
-            {y: 'Domingo', a: 100, b: 90}
-            ],
-        xkey: 'y',
-        ykeys: 'a',
-        labels: 'Corrida',
-        hideHover: 'auto',
-        resize: true
-    });
-        new Morris.Bar({
-        element: 'morris-bar-chart-musculacao',
-        data: [
-            {y: 'Segunda', a: 100, b: 90},
-            {y: 'Terça', a: 75,  b: 65},
-            {y: 'Quarta', a: 50,  b: 40}, 
-            {y: 'Quinta', a: 75,  b: 65},
-            {y: 'Sexta', a: 50,  b: 40},
-            {y: 'Sabado', a: 75,  b: 65},
-            {y: 'Domingo', a: 100, b: 90}
-            ],
-        xkey: 'y',
-        ykeys: 'a',
-        labels: 'Corrida',
-        hideHover: 'auto',
-        resize: true
-    });
+            new Morris.Bar({
+            element: 'morris-bar-chart-corridas',
+            data: [
+                {y: 'Segunda', a: 100, b: 90},
+                {y: 'Terça', a: 75,  b: 65},
+                {y: 'Quarta', a: 50,  b: 40}, 
+                {y: 'Quinta', a: 75,  b: 65},
+                {y: 'Sexta', a: 50,  b: 40},
+                {y: 'Sabado', a: 75,  b: 65},
+                {y: 'Domingo', a: 100, b: 90}
+                ],
+            xkey: 'y',
+            ykeys: 'a',
+            labels: 'Corrida',
+            hideHover: 'auto',
+            resize: true
+        });
+            new Morris.Bar({
+            element: 'morris-bar-chart-musculacao',
+            data: [
+                {y: 'Segunda', a: 100, b: 90},
+                {y: 'Terça', a: 75,  b: 65},
+                {y: 'Quarta', a: 50,  b: 40}, 
+                {y: 'Quinta', a: 75,  b: 65},
+                {y: 'Sexta', a: 50,  b: 40},
+                {y: 'Sabado', a: 75,  b: 65},
+                {y: 'Domingo', a: 100, b: 90}
+                ],
+            xkey: 'y',
+            ykeys: 'a',
+            labels: 'Corrida',
+            hideHover: 'auto',
+            resize: true
+        });
         
         
-    </script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
-</body>
+        </script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
