--- a/app/View/cadastro.html
+++ b/app/View/cadastro.html
@@ -1,3 +1,10 @@
+<?php
+function __autoload($class_name){
+require_once '../controller' . $class_name . '.php';
+
+}
+
+?>
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -5,7 +12,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Cadastro de usuário</title>
+        <title>Meu Cadastro</title>
 
         <meta name="author" content="Guilherme Castanho">
 
@@ -14,6 +21,17 @@
 
     </head>
     <body>
+        <?php
+        $usuario = new Usuarios();
+        if(isset($_POST['cadastrar']));
+
+        $nome        = $_POST['nome'];
+        $email       = $_POST['email'];
+        $bairro      = $_POST['bairro'];
+        $dnascimento = $_POST['nome'];
+        $senha       = $_POST['senha'];
+
+        ?>
 
         <div class="container-fluid">
             <div class="row">
@@ -54,18 +72,31 @@
                             <input type="text" class="form-control" id="sobrenome">
                         </div>
                         <div class="form-group">
-
-                            <label for="exampleInputEmail1">
-                                Endereço de Email
+                            <label for="bairro">
+                                Bairro
                             </label>
-                            <input type="email" class="form-control" id="exampleInputEmail1">
+                            <input type="text" class="form-control" id="bairro">
                         </div>
                         <div class="form-group">
 
-                            <label for="exampleInputPassword1">
+                            <label for="email">
+                                Endereço de Email
+                            </label>
+                            <input type="email" class="form-control" id="email">
+                        </div>
+                        <div class="form-group">
+
+                            <label for="senha">
                                 Senha
                             </label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
+                            <input type="password" class="form-control" id="senha">
+                        </div>
+                        <div class="form-group">
+
+                            <label for="datanascimento">
+                                Data de Nascimento
+                            </label>
+                            <input type="date" class="form-control" id="datanascimento">
                         </div>
 
 
