--- a/app/View/pg_inicial.html
+++ b/app/View/pg_inicial.html
@@ -29,7 +29,7 @@
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav">
                                 <li class="active">
-                                    <a href="#"><span class="glyphicon glyphicon-user"></span> Perfil </a>
+                                    <a href="pg_perfil.html"><span class="glyphicon glyphicon-user"></span> Perfil </a>
                                 </li>
                                 <li>
                                     <a href="#"><span class="glyphicon glyphicon-bishop"></span> Treinos </a>
@@ -82,16 +82,16 @@
                             <label for="comentario">
 
                             </label>
-                            <div class="dropdown">
-                                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Atividade
-                                    <span class="caret"></span></button>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Corrida</a></li>
-                                    <li><a href="#">Musculação</a></li>
-                                    <li><a href="#">Aerobico</a></li>
-                                </ul>
+                            <div class="form-group">
+                                <label for="sel1">Atividade:</label>
+                                <select class="form-control" id="sel1">
+                                    <option>Corrida</option>
+                                    <option>Musculação</option>
+                                    <option>Caminhada</option>
+                                    <option>Boxe</option>
+                                </select>
                             </div>
-                            <input type="text" class="form-control input-lg" id="comentario" value="Como está seu treino?">
+                            <textarea class="form-control" rows="5" id="comment"></textarea>
                         </div>
                         <button type="submit" class="btn btn-default">
                             Postar
@@ -117,6 +117,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
+                    <p></p>
                     <p>
                         Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
                     </p>
@@ -125,6 +126,8 @@
                         <a href="#" class="btn btn-default btn-sm">Comentar</a>
                         <a href="#" class="btn btn-default btn-sm">Compartilhar</a>
                     </div>
+                    <p>
+                    </p>
                     <p>
                         Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
                     </p>
