--- a/app/View/pg_inicial.html
+++ b/app/View/pg_inicial.html
@@ -54,7 +54,7 @@
                                         <li class="divider">
                                         </li>
                                         <li>
-                                            <a href="#"><span class="glyphicon glyphicon-log-in"></span> Sair</a>
+                                            <a href="cadastro.html"><span class="glyphicon glyphicon-log-in"></span> Sair</a>
                                         </li>
                                     </ul>
                                 </li>
